--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -19,3 +19,13 @@ jobs:
         run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
+
+#steps:
+#  - name: Set the value
+#    id: step_one
+#    run: |
+#      echo "action_state=yellow" >> $GITHUB_ENV
+#  - name: Use the value
+#    id: step_two
+#    run: |
+#      echo "${{ env.action_state }}" # This will output 'yellow'
