--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,15 +11,17 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: "drukkhua"
+          password: "dckr_pat__POLLzxIVb_wYwllt006fX46Aj0"
+#          username: ${{ secrets.DOCKERHUB_USER }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
-
+#run: echo "KEY=VALUE" >>$GITHUB_OUTPUT
 #steps:
 #  - name: Set the value
 #    id: step_one
