--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,10 +11,10 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-#          username: "drukkhua"
-#          password: "dckr_pat__POLLzxIVb_wYwllt006fX46Aj0"
-          username: "${{ secrets.DOCKERHUB_USER }}"
-          password: "${{ secrets.DOCKERHUB_TOKEN }}"
+          username: "drukkhua"
+          password: "dckr_pat__POLLzxIVb_wYwllt006fX46Aj0"
+#          username: "${{ secrets.DOCKERHUB_USER }}"
+#          password: "${{ secrets.DOCKERHUB_TOKEN }}"
       - name: Checkout
         uses: actions/checkout@v2
       - name: Test
